tests/errors/test_89.x
// Trait exists with the same name

trait Foo -> {
	foo() -> void;
}

trait Foo -> {
	foo() -> void;
}

fn main() -> void {}
